--- a/lib_source/_shared-attributes.adoc
+++ b/lib_source/_shared-attributes.adoc
@@ -18,6 +18,7 @@ alternative links on the GH Pages website, etc.).
 ////
 
 :AlanWWW: link:https://www.alanif.se/[www.alanif.se^,title="Visit Alan website"]
+:AlanGoogle: link:https://groups.google.com/g/alan-if[Alan IF discussions group^,title="Visit ALAN IF discussions at Google Groups"]
 
 
 // PathToMainDir
