Update Shared Attributes
* In `_shared-attributes.adoc` add new section for links to
  library assets and define `newgame` attr. linking to `newgame.alan`.
* Update QuickStart guide:
  * Enable book parts.
  * Add link to original `QuickStart.txt` document, for comparison.
  * Split document in two Parts: the new text, followed by the
    original text in the final part, so we can easily compare the
    two as we work on them (we'll delete the original once done).

--- a/lib_source/_shared-attributes.adoc
+++ b/lib_source/_shared-attributes.adoc
@@ -68,6 +68,9 @@ endif::[]
 :lib_verbs_restrictions: pass:q,a[link:{StdLibDir}/lib_verbs_restrictions.i[`lib_verbs_restrictions.i`^,title="View library source file"]]
 :COPYING: pass:q,a[link:{StdLibDir}/COPYING[`COPYING`^,title="View library license file"]]
 
+// Links to Extras assets
+// ======================
+:newgame: pass:q,a[link:{ExtrasDir}/newgame.alan[`newgame.alan`^,title="View newgame source file"]]
 
 // Links to repository Issues
 // ==========================
